--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
